add database and first endpoints
